feat-translate-some-titles

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -6,7 +6,7 @@
   "search": "Search",
   "vsfHomepage": "VSF Homepage",
   "home": "Home",
-  "products": "Products",
+  "products": "Βιβλία",
   "cart": "Cart",
   "wishlist": "Wishlist",
   "addProductToWishlist": "Add {{label}} to wishlist",
