--- a/apps/web/public/locales/en/category.json
+++ b/apps/web/public/locales/en/category.json
@@ -15,14 +15,14 @@
     "priceDown": "Price from high to low",
     "relevance": "Relevance"
   },
-  "numberOfProducts_one": "{{count}} Product",
-  "numberOfProducts_other": "{{count}} Products",
+  "numberOfProducts_one": "{{count}} Βιβλίο",
+  "numberOfProducts_other": "{{count}} Βιβλία",
   "prev": "Previous",
   "next": "Next",
   "emptyStateText": "We no longer have products in this category.",
   "emptyStateText2": "Have not found what you are looking for?",
   "emptyStateAltText": "Image for no products found",
-  "resultsFor": "Results for \"{{phrase}}\"",
+  "resultsFor": "Αποτελέσματα για \"{{phrase}}\"",
   "prevAriaLabel": "Go to previous page",
   "nextAriaLabel": "Go to next page",
   "secondPageAriaLabel": "Second page",
