feat: whole app

--- a/apps/web/public/locales/en/address.json
+++ b/apps/web/public/locales/en/address.json
@@ -10,6 +10,22 @@
     "addButton": "Add shipping address"
   },
   "form": {
+    "title":  "Title",
+    "subtitle": "subtitle",
+    "category_name":  "category_name",
+    "category_id": "category_id",
+    "writer":  "writer",
+    "translator": "translator",
+    "editor_epimelitis":  "editor_epimelitis",
+    "publisher": "publisher",
+    "pages":  "pages",
+    "dimensions": "dimensions",
+    "first_language":  "first_language",
+    "title_in_first_language": "title_in_first_language",
+    "commercial_availability":  "commercial_availability",
+    "type_of_bookbinding": "type_of_bookbinding",
+    "weight":  "weight",
+    "first_publishing": "first_publishing",
     "firstNameLabel": "First Name",
     "lastNameLabel": "Last Name",
     "phoneLabel": "Phone",
