--- a/apps/web/public/locales/en/footer.json
+++ b/apps/web/public/locales/en/footer.json
@@ -46,27 +46,20 @@
     "helpCenter": {
       "label": "Help center",
       "details": {
-        "description": "Find answers online anytime"
+        "description": "find answers into the books anytime"
       }
     },
     "liveChat": {
       "label": "Live chat",
       "details": {
-        "openingHours-1": "Mon–Fri, 5am–10pm PT",
-        "openingHours-2": "Sat–Sun, 6am–9pm PT"
-      }
-    },
-    "phone": {
-      "label": "1 234 567 8901",
-      "details": {
-        "openingHours-1": "Mon–Fri, 5am–10pm PT",
-        "openingHours-2": "Sat–Sun, 6am–9pm PT"
+        "openingHours-1": "Monday, 10:00–19:00",
+        "openingHours-2": "Saturday, 10:00–15:00"
       }
     }
   },
   "bottomLinks": {
-    "terms": "Terms",
-    "privacyPolicy": "Privacy policy"
+    "terms": "Fola",
+    "privacyPolicy": "sthn Anathesi"
   },
   "socialLabel": "Go to {{label}} page"
 }
